# ChangeLog for dev-php/PEAR-Archive_Tar
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Archive_Tar/ChangeLog,v 1.64 2015/01/14 20:12:53 grknight Exp $

*PEAR-Archive_Tar-1.3.13 (14 Jan 2015)

  14 Jan 2015; Brian Evans <grknight@gentoo.org>
  +PEAR-Archive_Tar-1.3.13.ebuild, -PEAR-Archive_Tar-1.3.9.ebuild:
  Version bump; drop old

  02 Nov 2014; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  Stable for alpha, wrt bug #517944

  29 Oct 2014; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  Stable for sparc, wrt bug #517944

  28 Oct 2014; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  Stable for ia64, wrt bug #517944

  27 Oct 2014; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  Stable for ppc64, wrt bug #517944

  18 Oct 2014; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  Stable for ppc, wrt bug #517944

  12 Oct 2014; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  Stable for x86, wrt bug #517944

  10 Oct 2014; Agostino Sarubbo <ago@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  Stable for amd64, wrt bug #517944

  02 Oct 2014; Brian Evans <grknight@gentoo.org> -PEAR-Archive_Tar-1.3.7.ebuild,
  -PEAR-Archive_Tar-1.3.8.ebuild:
  Remove old

  13 Sep 2014; Markus Meier <maekke@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  arm stable, bug #517944

  04 Sep 2014; Jeroen Roovers <jer@gentoo.org> PEAR-Archive_Tar-1.3.11.ebuild:
  Stable for HPPA (bug #517944).

  26 Jan 2014; Ole Markus With <olemarkus@gentoo.org>
  PEAR-Archive_Tar-1.3.7.ebuild, PEAR-Archive_Tar-1.3.9.ebuild:
  Removing stable keyword for sh/s390

*PEAR-Archive_Tar-1.3.11 (24 Mar 2013)

  24 Mar 2013; Matti Bickel <mabi@gentoo.org> +PEAR-Archive_Tar-1.3.11.ebuild:
  version bump

  09 Sep 2012; Raúl Porcel <armin76@gentoo.org> PEAR-Archive_Tar-1.3.9.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #418883
