@@ -1,12 +1,12 @@
 DEFINED_PHASES=install
-DEPEND=dev-lang/php[pcre(+)] >=dev-php/PEAR-PEAR-1.8.1
+DEPEND=dev-lang/php:*[pcre(+)] >=dev-php/PEAR-PEAR-1.8.1
 DESCRIPTION=Tar file management class
 EAPI=5
 HOMEPAGE=http://pear.php.net/package/Archive_Tar
 KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
 LICENSE=BSD
 PDEPEND=dev-php/pear
-RDEPEND=dev-lang/php[pcre(+)] >=dev-php/PEAR-PEAR-1.8.1
+RDEPEND=dev-lang/php:*[bzip2,posix,zlib] dev-lang/php:*[pcre(+)] >=dev-php/PEAR-PEAR-1.8.1
 SLOT=0
 SRC_URI=http://pear.php.net/get/Archive_Tar-1.3.13.tgz
-_md5_=ac0adc9834a8430d43879c0c2bce281e
+_md5_=46dadca63ce0ec4d1d204faf4060bd6f
