@@ -3,7 +3,7 @@ DEPEND=dbus? ( sys-apps/dbus ) kernel_linux? ( eap-sim? ( sys-apps/pcsc-lite ) d
 DESCRIPTION=IEEE 802.1X/WPA supplicant for secure wireless transfers
 EAPI=5
 HOMEPAGE=http://hostap.epitest.fi/wpa_supplicant/
-IUSE=ap dbus gnutls eap-sim fasteap +hs2.0 p2p ps3 qt4 readline selinux smartcard ssl tdls uncommon-eap-types wimax wps kernel_linux kernel_FreeBSD
+IUSE=ap dbus gnutls eap-sim fasteap +hs2-0 p2p ps3 qt4 readline selinux smartcard ssl tdls uncommon-eap-types wimax wps kernel_linux kernel_FreeBSD
 KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd
 LICENSE=|| ( GPL-2 BSD )
 RDEPEND=dbus? ( sys-apps/dbus ) kernel_linux? ( eap-sim? ( sys-apps/pcsc-lite ) dev-libs/libnl:3 net-wireless/crda ) !kernel_linux? ( net-libs/libpcap ) qt4? ( dev-qt/qtcore:4 dev-qt/qtgui:4 dev-qt/qtsvg:4 ) readline? ( sys-libs/ncurses sys-libs/readline:0 ) ssl? ( dev-libs/openssl:0 ) !ssl? ( gnutls? ( net-libs/gnutls ) ) !ssl? ( !gnutls? ( dev-libs/libtommath ) ) selinux? ( sec-policy/selinux-networkmanager )
@@ -11,4 +11,4 @@ REQUIRED_USE=fasteap? ( !gnutls !ssl ) smartcard? ( ssl )
 SLOT=0
 SRC_URI=http://hostap.epitest.fi/releases/wpa_supplicant-2.3.tar.gz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	9e0174de733aecba0a7e66b2b01841d2	qt4-r2	7199e3db5b5908325487d379c6f67cf0	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=8121586c363f4b77778507226b05ed3f
+_md5_=ef6dfe77ba31139575647bb81d54a0bd
